--- a/index.ipynb
+++ b/index.ipynb
@@ -241,8 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
-    "derivative_at(three_x_squared_minus_eleven, 2) # 12"
+    "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
    ]
   },
   {
