--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,8 @@
     }
    ],
    "source": [
-    "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
+    "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
+    "derivative_at(three_x_squared_minus_eleven, 2) # 12"
    ]
   },
   {
