--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    deri\n",
+    "    deri = find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
     "    return "
    ]
   },
