--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    deri = find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
-    "    return "
+    "    return deri"
    ]
   },
   {
