Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    deri = find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
-    "    return deri[0][0]*"
+    "    return deri[0][0]*x+"
    ]
   },
   {
