Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,21 +233,21 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    deri = find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
-    "    return deri[0][0]*(x**deri[0][1]"
+    "    return deri[0][0]*(x**deri[0][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "12"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
